--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -22,6 +22,7 @@
     "colab": {
       "name": "HeroesOfPymoli.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
