--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -45,7 +45,7 @@
       "source": [
         "# Heroes of Pymoli Homework\n",
         "\n",
-        "![Fantasy](Images/Fantasy.png)\n",
+        "![Fantasy](http://drive.google.com/uc?export=view&id=1xqJfwaaZJ_warRjU8BX9PVFoz1aXIm5t)\n",
         "\n",
         "Congratulations! After a lot of hard work in the data munging mines, you've landed a job as Lead Analyst for an independent gaming company. You've been assigned the task of analyzing the data for their most recent fantasy game Heroes of Pymoli.\n",
         "\n",
