Added image to google colab

--- a/HeroesOfPymoli/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli/HeroesOfPymoli.ipynb
@@ -15,7 +15,7 @@
     "## How to read this homework\n",
     "You will find that each task has it's instruction before the code to solve it, at the end and before a new task the solution can be found with a visual data frame representation.\n",
     "\n",
-    "At the end of this note book you'll find the observable trends."
+    "At the end of this note book you'll find the observable trends with some insights."
    ]
   },
   {
