--- a/HeroesOfPymoli.ipynb
+++ b/HeroesOfPymoli.ipynb
@@ -22,7 +22,6 @@
     "colab": {
       "name": "HeroesOfPymoli.ipynb",
       "provenance": [],
-      "collapsed_sections": [],
       "include_colab_link": true
     }
   },
@@ -55,7 +54,7 @@
         "## How to read this homework\n",
         "You will find that each task has it's instruction before the code to solve it, at the end and before a new task the solution can be found with a visual data frame representation.\n",
         "\n",
-        "At the end of this note book you'll find the observable trends."
+        "At the end of this note book you'll find the observable trends with some insights."
       ]
     },
     {
@@ -65,9 +64,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 34
+          "height": 122
         },
-        "outputId": "dea3f66f-4d95-4780-9265-33b655d4a41f"
+        "outputId": "c5d10a16-ef94-4f59-a805-606ef7441c2c"
       },
       "source": [
         "# Dependencies imports\n",
@@ -75,12 +74,16 @@
         "from google.colab import drive \n",
         "drive.mount('/content/gdrive')"
       ],
-      "execution_count": 49,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Drive already mounted at /content/gdrive; to attempt to forcibly remount, call drive.mount(\"/content/gdrive\", force_remount=True).\n"
+            "Go to this URL in a browser: https://accounts.google.com/o/oauth2/auth?client_id=947318989803-6bn6qk8qdgf4n4g3pfee6491hc0brc4i.apps.googleusercontent.com&redirect_uri=urn%3aietf%3awg%3aoauth%3a2.0%3aoob&response_type=code&scope=email%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdocs.test%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive%20https%3a%2f%2fwww.googleapis.com%2fauth%2fdrive.photos.readonly%20https%3a%2f%2fwww.googleapis.com%2fauth%2fpeopleapi.readonly\n",
+            "\n",
+            "Enter your authorization code:\n",
+            "··········\n",
+            "Mounted at /content/gdrive\n"
           ],
           "name": "stdout"
         }
